Revert "Commit: ScoresPanel finalizegrade"
This reverts commit 5167a2306bc29231426d84773c2d294552a3020e.